# praxis-backend

./: .bazelignore  .bazelrc  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl
praxis-rs/analytics/: BUILD.bazel  Cargo.toml
praxis-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
praxis-rs/ansi-escape/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/app-gateway-client/: BUILD.bazel  Cargo.toml
praxis-rs/app-gateway-client/src/: events.rs  lib.rs  remote.rs  tests.rs
praxis-rs/app-gateway-core/: BUILD.bazel  Cargo.toml
praxis-rs/app-gateway-core/src/: lib.rs
praxis-rs/app-gateway-native/: BUILD.bazel  Cargo.toml
praxis-rs/app-gateway-native/src/: lib.rs
praxis-rs/app-gateway-protocol/: BUILD.bazel  Cargo.toml
praxis-rs/app-gateway-protocol/src/: export.rs  jsonrpc_lite.rs  lib.rs  schema_fixtures.rs
praxis-rs/app-gateway-protocol/src/export/: experimental_filter.rs  generated_files.rs  json_schema.rs  tests.rs
praxis-rs/app-gateway-protocol/src/protocol/: api.rs  common.rs  mod.rs  thread_history.rs  thread_history_policy.rs  thread_history_tests.rs
praxis-rs/app-gateway-runtime/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/app-gateway-runtime/src/: app_gateway_tracing.rs  bespoke_event_handling.rs  config_api.rs  dynamic_tools.rs  external_agent_config_api.rs  fs_api.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  praxis_message_processor.rs  thread_status.rs
praxis-rs/app-gateway-service/: BUILD.bazel  Cargo.toml
praxis-rs/app-gateway-service/src/: lib.rs
praxis-rs/app-gateway-test-client/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/app-gateway-test-client/scripts/: live_elicitation_hold.sh
praxis-rs/app-gateway-test-client/src/: lib.rs  main.rs
praxis-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/app-server-client/src/: lib.rs  remote.rs
praxis-rs/arg0/: BUILD.bazel  Cargo.toml
praxis-rs/arg0/src/: lib.rs
praxis-rs/backend-client/: BUILD.bazel  Cargo.toml
praxis-rs/backend-client/src/: client.rs  types.rs
praxis-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs
praxis-rs/chatgpt/tests/: task_turn_fixture.json
praxis-rs/cli/: BUILD.bazel  Cargo.toml
praxis-rs/cli/src/: app_cmd.rs  commands.rs  debug_commands.rs  debug_sandbox.rs  dispatch_support.rs  exit_handling.rs  feature_flags.rs  interactive_launch.rs  lib.rs  login.rs  main.rs  main_tests.rs  mcp_cmd.rs  remote_control.rs  session_target.rs  wsl_paths.rs
praxis-rs/cli/tests/: debug_clear_memories.rs  execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
praxis-rs/cloud-requirements/: BUILD.bazel  Cargo.toml
praxis-rs/cloud-requirements/src/: cache.rs  constants.rs  fetcher.rs  lib.rs  loader.rs  metrics.rs  parsing.rs  provider.rs  service.rs  tests.rs
praxis-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
praxis-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
praxis-rs/cloud-tasks-client/src/: http.rs
praxis-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
praxis-rs/cloud-tasks-mock-client/src/: mock.rs
praxis-rs/cloud-tasks/src/: app.rs  apply_jobs.rs  backend.rs  cli.rs  command_support.rs  detail_jobs.rs  details_text.rs  env_detect.rs  environment_jobs.rs  lib.rs  lib_tests.rs  new_task.rs  task_commands.rs  task_jobs.rs  ui.rs  util.rs
praxis-rs/cloud-tasks/tests/: env_filter.rs
praxis-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.1-praxis-max_prompt.md  gpt-5.2-praxis_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_praxis_prompt.md  models.json  prompt.md  prompt_with_apply_patch_instructions.md
praxis-rs/core-skills/: BUILD.bazel  Cargo.toml
praxis-rs/core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils_tests.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  model.rs  remote.rs  render.rs  system.rs
praxis-rs/core/src/: agent_os.rs  api_bridge.rs  api_bridge_tests.rs  apply_patch.rs  arc_monitor.rs  arc_monitor_tests.rs  auth_env_telemetry.rs  auto_summary.rs  auto_title.rs  auto_title_profile.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  connectors.rs  connectors_tests.rs  consequential_tool_message_templates.json  contextual_user_message.rs  contextual_user_message_tests.rs  environment_context.rs  error.rs  error_tests.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  exec_tests.rs  external_agent_config.rs  external_agent_config_tests.rs  flags.rs  (+91 more)
praxis-rs/core/tests/: responses_headers.rs
praxis-rs/debug-client/: Cargo.toml  README.md
praxis-rs/debug-client/src/: client.rs  commands.rs  main.rs  reader.rs  state.rs
praxis-rs/exec/: BUILD.bazel  Cargo.toml
praxis-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
praxis-rs/exec/tests/: event_processor_with_json_output.rs
praxis-rs/features/: BUILD.bazel  Cargo.toml
praxis-rs/features/src/: lib.rs  tests.rs
praxis-rs/feedback/: BUILD.bazel  Cargo.toml
praxis-rs/feedback/src/: feedback_diagnostics.rs  lib.rs
praxis-rs/file-search/: BUILD.bazel  Cargo.toml  README.md
praxis-rs/file-search/src/: lib.rs  main.rs  tests.rs
praxis-rs/hooks/: BUILD.bazel  Cargo.toml
praxis-rs/hooks/src/: legacy_notify.rs  lib.rs  notify.rs  registry.rs  schema.rs  types.rs  user_notification.rs
praxis-rs/instructions/: BUILD.bazel  Cargo.toml
praxis-rs/instructions/src/: fragment.rs  lib.rs  user_instructions.rs  user_instructions_tests.rs
(+3644 files in other folders)
