[package]
edition.workspace = true
license.workspace = true
name = "praxis-analytics"
version.workspace = true

[lib]
doctest = false
name = "praxis_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
praxis-app-server-protocol = { workspace = true }
praxis-git-utils = { workspace = true }
praxis-login = { workspace = true }
praxis-plugin = { workspace = true }
praxis-protocol = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
