[package]
name = "praxis-ansi-escape"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "praxis_ansi_escape"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tracing = { workspace = true, features = ["log"] }
