[package]
name = "praxis-app-gateway-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "praxis_app_gateway_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
praxis-app-gateway-native = { workspace = true }
praxis-app-gateway-protocol = { workspace = true }
praxis-arg0 = { workspace = true }
praxis-core = { workspace = true }
praxis-feedback = { workspace = true }
praxis-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
