[package]
name = "praxis-app-gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "praxis_app_gateway_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
praxis-app-gateway-protocol = { workspace = true }
serde_json = { workspace = true }
