[package]
name = "praxis-app-gateway-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "praxis_app_gateway_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
praxis-experimental-api-macros = { workspace = true }
praxis-git-utils = { workspace = true }
praxis-protocol = { workspace = true }
praxis-utils-absolute-path = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
shlex = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
ts-rs = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
