[package]
name = "praxis-app-gateway-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "praxis-app-gateway-runtime"
path = "src/main.rs"

[[bin]]
name = "praxis-app-gateway-runtime-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "praxis_app_gateway_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
praxis-analytics = { workspace = true }
praxis-arg0 = { workspace = true }
praxis-cloud-requirements = { workspace = true }
praxis-config = { workspace = true }
praxis-core = { workspace = true }
praxis-exec-server = { workspace = true }
praxis-features = { workspace = true }
praxis-git-utils = { workspace = true }
praxis-otel = { workspace = true }
praxis-shell-command = { workspace = true }
praxis-utils-cli = { workspace = true }
praxis-utils-pty = { workspace = true }
praxis-backend-client = { workspace = true }
praxis-file-search = { workspace = true }
praxis-chatgpt = { workspace = true }
praxis-login = { workspace = true }
praxis-mcp = { workspace = true }
praxis-protocol = { workspace = true }
praxis-app-gateway-protocol = { workspace = true }
praxis-feedback = { workspace = true }
praxis-rmcp-client = { workspace = true }
praxis-rollout = { workspace = true }
praxis-sandboxing = { workspace = true }
praxis-state = { workspace = true }
praxis-tools = { workspace = true }
praxis-utils-absolute-path = { workspace = true }
praxis-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
constant_time_eq = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
core_test_support = { workspace = true }
praxis-utils-cargo-bin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
