[package]
name = "praxis-app-gateway-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "praxis_app_gateway_service"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
praxis-app-gateway-runtime = { workspace = true }
praxis-app-gateway-protocol = { workspace = true }
praxis-arg0 = { workspace = true }
praxis-core = { workspace = true }
praxis-protocol = { workspace = true }
praxis-utils-cli = { workspace = true }
