[package]
name = "praxis-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
praxis-backend-openapi-models = { path = "../praxis-backend-openapi-models" }
praxis-client = { workspace = true }
praxis-login = { workspace = true }
praxis-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
