[package]
edition.workspace = true
license.workspace = true
name = "praxis-cloud-tasks-client"
version.workspace = true

[lib]
name = "praxis_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
praxis-backend-client = { workspace = true }
praxis-git-utils = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
