
[package]
edition.workspace = true
license.workspace = true
name = "praxis-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "praxis_cloud_tasks_mock_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
praxis-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
