[package]
edition.workspace = true
license.workspace = true
name = "praxis-cloud-tasks"
version.workspace = true

[lib]
name = "praxis_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
praxis-client = { workspace = true }
praxis-cloud-tasks-client = { workspace = true }
praxis-cloud-tasks-mock-client = { workspace = true }
praxis-core = { workspace = true }
praxis-git-utils = { workspace = true }
praxis-login = { path = "../login" }
praxis-tui = { workspace = true }
praxis-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dependencies.async-trait]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
