load("//:defs.bzl", "praxis_rust_crate")

praxis_rust_crate(
    name = "core-skills",
    crate_name = "praxis_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
