[package]
edition.workspace = true
license.workspace = true
name = "praxis-core-skills"
version.workspace = true

[lib]
doctest = false
name = "praxis_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
praxis-analytics = { workspace = true }
praxis-config = { workspace = true }
praxis-instructions = { workspace = true }
praxis-login = { workspace = true }
praxis-otel = { workspace = true }
praxis-protocol = { workspace = true }
praxis-skills = { workspace = true }
praxis-utils-absolute-path = { workspace = true }
praxis-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
