[package]
name = "praxis-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "praxis-exec"
path = "src/main.rs"

[lib]
name = "praxis_exec"
path = "src/lib.rs"

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
praxis-arg0 = { workspace = true }
praxis-app-gateway-client = { workspace = true }
praxis-app-gateway-protocol = { workspace = true }
praxis-cloud-requirements = { workspace = true }
praxis-core = { workspace = true }
praxis-feedback = { workspace = true }
praxis-git-utils = { workspace = true }
praxis-login = { workspace = true }
praxis-otel = { workspace = true }
praxis-protocol = { workspace = true }
praxis-utils-absolute-path = { workspace = true }
praxis-utils-cli = { workspace = true }
praxis-utils-oss = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
praxis-apply-patch = { workspace = true }
praxis-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
