[package]
name = "praxis-file-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "praxis-file-search"
path = "src/main.rs"

[lib]
name = "praxis_file_search"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
nucleo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
